[project]
name = "questlog"
version = "0.1.0"
description = "Personal gaming data backend - tracks games, playthroughs, and curated lists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.3.0",
    "psycopg>=3.2.1",
    "django-environ>=0.11.2",
    "redis>=5.2.0",
    "httpx>=0.25.0",
    "celery>=5.3.0",
    "whitenoise>=6.8.2",
    "sentry-sdk[django]>=2.37.0",
    "ruff>=0.12.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.5.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "venv"
]
extend-include = ["*.pyi?"]
indent-width = 4
line-length = 88
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["A", "B", "C", "D", "E", "F", "I"]
ignore = [
    "E501",
    "E741",
    "S101",
    "S104",
    "S603",
    "S607",
    "S311",
    "RUF005",
    "RUF010",
    "RUF012",
    "RUF019",
    "RUF100",
    "DJ001",
    "UP038",
]
select = [
    "B",
    "C4",
    "DJ",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["apps", "config"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
