[project]
name = "questlog"
version = "0.1.0"
description = "Personal gaming data backend - tracks games, playthroughs, and curated lists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "daphne>=4.1.0",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-ninja>=1.5.0",
    "httpx>=0.28.0",
    "psycopg>=3.3.0",
    "redis>=6.0.0",
    "sentry-sdk[django]>=2.40.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-django>=4.12.0",
    "ruff>=0.12.10",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "venv"
]
extend-include = ["*.pyi?"]
indent-width = 4
line-length = 88
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["A", "B", "C", "D", "E", "F", "I"]
ignore = [
    "E501",
    "E741",
    "S101",
    "S104",
    "S603",
    "S607",
    "S311",
    "RUF005",
    "RUF010",
    "RUF012",
    "RUF019",
    "RUF100",
    "DJ001",
    "UP038",
]
select = [
    "B",
    "C4",
    "DJ",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["apps", "config"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
